wp-content/themes/delivering-happiness/assets/sass/global/_blog.scss
//
// Blog page
// --------------------------------------------------

.happiness-page {
    padding-bottom: 50px;
    .nav-links {}
    background: #f5f4f2;
    .left-col {
        @extend %pull-left;
        width: 698px;
    }
    .right-col {
        @extend %pull-right;
        width: 256px;
    }
    .wrapper {
        @include clearfix;
        padding: 47px 103px 0 46px;
    }
    .page-header {
        padding-left: 13px;
        padding-bottom: 54px;
        @include clearfix;
        h1 {
            color: $Blue;
            @extend %heading-level-12;
            @extend %pull-left;
            font-style: italic;
        }
        a {
            color: $Blue;
        }
        .all-categories {
            padding-top: 13px;
            padding-bottom: 15px;
            @extend %pull-right;
            a {
                color: $Gray;
                @extend %pharagraph-level-6;
                text-transform: uppercase;
                margin-left: 30px;
                letter-spacing: 2px;
                &:hover, &.active-cat {
                    color: $Blue;
                }
            }
        }
    }
    .post {
        @include clearfix;
        padding: 32px 20px 25px 20px;
        border: 5px solid darken($LightGray, 6.2%);
        background: $White;
        margin-bottom: 40px;
        .media {
            @extend %pull-left;
            width: 205px;
            img {
                width: 185px;
            }
        }
        .entry-header {
            h2 {
                @extend %heading-level-10;
                line-height: 28px;
                margin-bottom: 6px;
                a {
                    color: $Blue;
                }
            }
            .entry-meta {
                letter-spacing: 1px;
                margin-bottom: 14px;
                text-transform: uppercase;
                @extend %pharagraph-level-7;
                color: lighten($Black, 60%);
                // #999
                a {
                    color: lighten($Black, 60%);
                    // #999
               
                }
            }
        }
        .content {
            &.expaned {
                float: none;
                width: auto;
                padding-left: 0px;
            }
            @extend %pull-left;
            width: 400px;
            padding-left: 18px;
            p {
                @extend %pharagraph-level-5;
                line-height: 23px;
                padding-bottom: 10px;
            }
            .cta {
                color: $Blue;
                font-style: italic;
                &:hover {
                    text-decoration: underline;
                }
            }
        }
        &.detail {
            @extend %typography;
            strong, b {
                font-weight: bold;
            }
            img {
                max-width: 618px;
            }
        }
    }
    .sidebar {
        .twitter,
        .widget_polls-widget {
            background-color: $White;
            border: 1px solid darken($LightGray, 6.2%);
            padding: 10px;
        }
        .widget_polls-widget {
            padding: 10px;
            margin-bottom: 18px;
            @extend %text-left;
            .widget-title {
                @extend %text-center;
                text-transform: uppercase;
                padding: 18px 0;
            }
            .wp-polls-ul {
                color: $Blue;
                padding-top: 20px;
                li {
                    padding: 5px;
                    padding-bottom: 10px;
                    label {
                        padding-left: 10px;
                    }
                }
            }
            .Buttons {
                @include border_radius(13px);
                @include transition(all 0.3s ease);
                @extend %text-center;
                padding: 6px 0px;
                cursor: pointer;
                color: $Blue;
                border: none;
                border: 1px solid $Blue;
                background-color: rgba($Blue, 0.1);
                color: $Blue;
                text-transform: uppercase;
                display: block;
                font-size: 14px;
                width: 82px;
                margin: 0px auto;
                letter-spacing: 1px;
                &:hover {
                    background-color: rgba($Blue, 0.2);
                }
            }
            p {
                text-align: left !important;
                line-height: 25px;
                a {
                    @extend %text-center;
                    color: $Blue;
                    display: block;
                }
            }
            li {
                padding-top: 25px;
                padding-bottom: 10px;
                a {
                    @extend %text-center;
                    display: block;
                    font-size: 13px;
                    text-transform: uppercase;
                    color: #999999;
                }
            }
        }
        .become-a-vhp {
            background: $Blue;
            color: $White;
            text-align: center;
            padding: 19px 30px 18px 30px;
            margin-bottom: 19px;
            h3 {
                @extend %heading-level-10;
                line-height: 1.5em;
                span {
                    @extend %pharagraph-level-5;
                    display: block;
                    line-height: 10px;
                }
            }
            .gform_description,
            p {
                @extend %pharagraph-level-7;
                color: #9ed4ee;
                padding: 16px 16px 20px 16px;
                line-height: 17px;
                display: block;
            }
            input[type="text"] {
                @include size(100%, 35px);
                padding-left: 13px;
                background-color: rgba($White, 0.8);
                border: none;
                color: $Blue;
                font-style: italic;
                border: 2px solid $White;
                margin-bottom: 11px;
                @include input-placeholder {
                    color: $Blue;
                    font-style: italic;
                    font-size: 12px;
                }
            }
            .button {
                padding: 8px 25px;
                margin-left: 10px;
                background-color: rgba($White, 0.8);
                cursor: pointer;
                color: $Blue;
                border: none;
                &:hover {
                    background-color: rgba($White, 0.6);
                }
            }
            .validation_message,
            .validation_error {
                color: #a80303;
                padding-top: 0px;
            }
            .gform_confirmation_message {
                color: white;
                padding-top: 0px;
            }
            .gform_heading {
                display: block;
            }
        }
        .wfu {
            height: 75px;
            margin-bottom: 40px;
            @include bg-img-only(wfu-g, png, no-repeat, center, center);
            background-color: $ModerateViolet;
            color: $White;
            text-align: center;
            h3 {
                @extend %heading-level-10;
                line-height: 3em;
            }
            a{
                color: white;
            }
        }
        .fp {
            margin-bottom: 40px;
            hr {
                @include bg-img-only(w-hr, gif, no-repeat, center, center);
                height: 16px;
                border: none;
            }
            h3 {
                color: $Gray;
                letter-spacing: 1px;
                margin: 20px 0 33px 0;
            }
            a {
                display: block;
                color: $Blue;
                margin-bottom: 20px;
                line-height: 22px;
                &:hover {
                    text-decoration: underline;
                }
            }
        }
        .twitter {
            margin-bottom: 19px;
        }
        .popular-posts {
            @include bg-img-only(w-hr, gif, no-repeat, top, center);
            margin-bottom: 40px;
            margin-top: 40px;
            padding-top: 15px;
            h1 {
                color: $Gray;
                letter-spacing: 1px;
                margin: 20px 0 33px 0;
            }
            a {
                display: block;
                color: $Blue;
                margin-bottom: 20px;
                line-height: 22px;
                &:hover {
                    text-decoration: underline;
                }
            }
        }
    }
}
.status-publish {
    h2 {
        color: $Blue;
    }
}
.stButton .stFb, .stButton .stTwbutton, .stButton .stMainServices{
    height: 22px !important;
}

.no-break span {
    box-sizing: unset;
    box-sizing: initial;
}

